--- a/templates/base.html
+++ b/templates/base.html
@@ -1,1 +1,12 @@
-<html></html>
+<!doctype html>
+<head>
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+</head>
+<body>
+<h3>register</h3>
+        <form action="" method="post">
+            <p>username: <input type=text name=username>
+            <p>password: <input type=password name=password>
+            <p><input type=submit value=Login>
+        </form>
+</body>
