--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,19 @@
-<!doctype html>
-<head>
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-</head>
-<body>
-<h3>register</h3>
-        <form action="" method="post">
-            <p>username: <input type=text name=username>
-            <p>password: <input type=password name=password>
-            <p><input type=submit value=Login>
-        </form>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Tangerine">
+		<style>
+		body {
+			font-family: 'Tangerine', serif;
+			font-size: 48px;
+		}
+		</style>
+	
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		
+		<div class="container" id="navbar">
+			Nerds Reborn
+		</div>
+	</head>
+
+</html>
