--- a/nerds/templates/base.html
+++ b/nerds/templates/base.html
@@ -11,9 +11,15 @@
         <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
         <script src="http://code.jquery.com/jquery-latest.js"></script>
         <script src="/static/js/bootstrap.min.js"></script>
+        
+        <!-- fonts -->
+        <link href='http://fonts.googleapis.com/css?family=Ubuntu|Audiowide|Rock+Salt|Orbitron' rel='stylesheet' type='text/css'>
+
         <style>
             body {
-                background-image: url("/static/image/cp_blur.jpg");
+                font-family: 'Ubuntu', sans-serif;
+                
+                background-color: black;
                 background-repeat:no-repeat;
                 background-size: 100%;
             }
@@ -26,9 +32,14 @@
               <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
               <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
             <![endif]-->
-
         </head>
 
+        
+        
+        
+        
+        
+        
         <body>
             <nav class="navbar navbar-inverse" role="navigation">
             <div class="container-fluid">
@@ -40,27 +51,35 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Nerds Reborn</a>
+                    <a class="navbar-brand" href="/">Nerds Reborn</a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">Link</a></li>
+                        <li><a href="#">Sign In</a></li>
+                        <li><a href="#">Register</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown"> username <span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
-                                <li><a href="#">My Profile</a></li>
-                                <li><a href="#">Edit My Classes</a></li>
+                                <li><a href="#">my profile</a></li>
                                 <li class="divider"></li>
-                                <li><a href="/logout">Log Out</a></li> 
+                                <li><a href="/logout">log out</a></li> 
                             </ul>
                         </li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
+            
+            
+            
+            
+            
         </nav>
+            
+            
+            
     </body>
 
 </html>
