--- a/nerds/templates/index.html
+++ b/nerds/templates/index.html
@@ -1,12 +1,14 @@
 <!doctype html>
 <head>
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link href="/static/css/landing-page.css" rel="stylesheet">
+    <title>Nerds Reborn</title>
 </head>
 <body>
-<h3>register</h3>
-        <form action="" method="post">
-            <p>username: <input type=text name=username>
-            <p>password: <input type=password name=password>
-            <p><input type=submit value=Login>
-        </form>
+    <h3>register</h3>
+    <form action="" method="post">
+        <p>username: <input type=text name=username>
+        <p>password: <input type=password name=password>
+        <p><input type=submit value=Login>
+    </form>
 </body>
