--- a/nerds/templates/base.html
+++ b/nerds/templates/base.html
@@ -7,10 +7,10 @@
         <title>base</title>
 
         <!-- Bootstrap -->
-        <link href="/static/css/bootstrap.min.css" rel="stylesheet" media="screen">
+        <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" media="screen">
         <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
         <script src="http://code.jquery.com/jquery-latest.js"></script>
-        <script src="/static/js/bootstrap.min.js"></script>
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
         
         <!-- fonts -->
         <link href='http://fonts.googleapis.com/css?family=Ubuntu|Audiowide|Rock+Salt|Orbitron' rel='stylesheet' type='text/css'>
