--- a/nerds/templates/base.html
+++ b/nerds/templates/base.html
@@ -4,44 +4,70 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>base</title>
+        {% block head %}
+        <title>{% block title %}{% endblock %} - Nerds Reborn</title>
 
         <!-- Bootstrap -->
         <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" media="screen">
         <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
         <script src="http://code.jquery.com/jquery-latest.js"></script>
+        <script src="/static/js/facebook.js"></script>
         <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-        
+
         <!-- fonts -->
         <link href='http://fonts.googleapis.com/css?family=Ubuntu|Audiowide|Rock+Salt|Orbitron' rel='stylesheet' type='text/css'>
 
         <style>
+            
+            
             body {
                 font-family: 'Ubuntu', sans-serif;
-                
-                background-color: black;
-                background-repeat:no-repeat;
-                background-size: 100%;
+                background-image: url('http://i.imgur.com/wFC8faU.png');
+                background-repeat: repeat;
+                background-color: #222;
+                color: #ddd;
             }
-            </style>
+            
+            .navbar-brand {
+                font-family: 'Ubuntu', sans-serif;
+                font-weight: bold;
+                letter-spacing: 3px;
+            }
+            
+            .footer {
+                position: absolute;
+                bottom: 0;
+                width: 100%;
+                height: 60px;
+                background-color: #222;
+                text-align: center;
+                color: #ddd;
+            }
+            
+            .divider {
+                padding: 20px;
+            }
+            
+            a {
+                color: #777;
+            }
+
+            
+        </style>
 
 
-            <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-            <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-            <!--[if lt IE 9]>
-              <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-              <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-            <![endif]-->
-        </head>
+        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]>
+          <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+          <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <![endif]-->
+        {% endblock %}
+    </head>
 
-        
-        
-        
-        
-        
-        
-        <body>
-            <nav class="navbar navbar-inverse" role="navigation">
+
+    <body>
+        <nav class="navbar navbar-inverse" role="navigation">
             <div class="container-fluid">
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
@@ -58,28 +84,45 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">Sign In</a></li>
-                        <li><a href="#">Register</a></li>
+                        {% if not session["user_id"] %}
+                        <li><a href="/login/">Sign In</a></li>
+                        <li><a href="/register/">Register</a></li>
+                        {% else %}
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"> username <span class="caret"></span></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"> {{ session["firstlast"] }} <span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
-                                <li><a href="#">my profile</a></li>
-                                <li class="divider"></li>
-                                <li><a href="/logout">log out</a></li> 
+                                <li><a href="/user/{{session.user_id}}" >my classes</a></li>
+                                <li class="divider2"></li>
+                                <li><a href="/logout/">log out</a></li>
                             </ul>
                         </li>
+                        {% endif %}
                     </ul>
                 </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
-            
-            
-            
-            
-            
         </nav>
-            
-            
-            
+        
+        {% block flashbox %}{% endblock %}
+        
+
+        <div id="content" class="container-fluid">
+            {% block content %}{% endblock %}
+        </div>
+        
+        <div class="footer">
+            <div class="container-fluid">
+                <a href="/">home</a>
+                <span class="divider">.</span>
+                <a href="/about/">about</a>
+                <span class="divider">.</span>
+                <a href="/contact/">contact</a>
+            </div>
+        </div>
+        
+        
+
+
+
     </body>
 
 </html>
