--- a/nerds/templates/index.html
+++ b/nerds/templates/index.html
@@ -1,14 +1,31 @@
-<!doctype html>
-<head>
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link href="/static/css/landing-page.css" rel="stylesheet">
-    <title>Nerds Reborn</title>
-</head>
-<body>
-    <h3>register</h3>
-    <form action="" method="post">
-        <p>username: <input type=text name=username>
-        <p>password: <input type=password name=password>
-        <p><input type=submit value=Login>
+{% extends "base.html" %}
+{% block title %}login{% endblock %}
+{% block head %}
+    {{ super() }}
+    <style type="text/css">
+        form {
+            color: #111;
+            text-align: center;  
+            margin:
+        }
+        
+        input {
+            margin: 5px;
+        }
+        
+        h1 {
+            text-align: center;
+        }
+
+    </style>
+{% endblock %}
+{% block content %}
+<h1> Log In </h1>
+    <form action="" method="post" name="login">
+    <p>
+        {{form.email()}}<br>
+        {{form.password()}}<br>
+    </p>
+    <p><input type="submit" value="Log In"></p>
     </form>
-</body>
+{% endblock %}
