--- a/nerds/templates/login.html
+++ b/nerds/templates/login.html
@@ -25,6 +25,7 @@
                 border-color: #222;
                 border-radius: 15px;
                 box-shadow: 5px 5px #111;
+                max-height: 800px;
             }
     </style>
 {% endblock %}
