--- a/nerds/templates/no_sched.html
+++ b/nerds/templates/no_sched.html
@@ -1,12 +1,43 @@
-<!doctype html>
-<head>
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-</head>
-<body>
-<h3>register</h3>
-        <form action="" method="post">
-            <p>username: <input type=text name=username>
-            <p>password: <input type=password name=password>
-            <p><input type=submit value=Login>
-        </form>
-</body>
+{% extends "base.html" %}
+{% block title %}login{% endblock %}
+{% block head %}
+{{ super() }}
+<style type="text/css">
+    form {
+        color: #111;
+        text-align: center;  
+    }
+
+    input {
+        margin: 5px;
+    }
+
+    h1 {
+        text-align: center;
+    }
+
+    #content {
+        background-color: #222;
+        width: 40%;
+        height: 100%;
+        border-style: solid;
+        border-width: 3px;
+        border-color: #222;
+        border-radius: 15px;
+        box-shadow: 5px 5px #111;
+        max-height: 800px;
+    }
+    p {
+        text-align: center;
+    }
+</style>
+{% endblock %}
+{% block content %}
+<h1> Schedule not found </h1>
+<form action="" method="post" name="login" class="container-fluid">
+    <p>
+        Sorry, this user hasn't set up their schedule yet.
+    </p>
+    <p><input type="submit" value="Log In"></p>
+</form>
+{% endblock %}
