--- a/nerds/templates/register.html
+++ b/nerds/templates/register.html
@@ -35,7 +35,7 @@
     </style>
 {% endblock %}
 {% block content %}
-<h1> Register </h1>
+<h1> Sign Up </h1>
     <form action="" method="post" name="login">
     <p>
         <div>{{ form.first_name(placeholder="first name") }}</div>
