--- a/nerds/templates/login.html
+++ b/nerds/templates/login.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}login{% endblock %}
+{% block title %}Log In{% endblock %}
 {% block head %}
     {{ super() }}
     <style type="text/css">
