Final before deploy
Finished the user_overview page, added about page, small touches

--- a/nerds/templates/base.html
+++ b/nerds/templates/base.html
@@ -205,7 +205,7 @@
                 <span class="divider">.</span>
                 <a href="/about/">about</a>
                 <span class="divider">.</span>
-                <a href="/contact/">contact</a>
+                <a href="mailto:wsagehorn@gmail.com">contact</a>
                 <span class="divider">.</span>
                 <span class="fb-share-button" data-href="http://nerds.waltersagehorn.com/"></span>
                 <span class="divider">.</span>
