--- a/nerds/templates/new_class.html
+++ b/nerds/templates/new_class.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}login{% endblock %}
+{% block title %}New Class{% endblock %}
 {% block head %}
 {{ super() }}
 <style type="text/css">
