--- a/nerds/templates/index.html
+++ b/nerds/templates/index.html
@@ -48,7 +48,7 @@
 
     #main {
         width: 90%;
-        background-image: url("/static/image/cp_gblur.jpg");
+        background-image: url("http://i.imgur.com/p11GbQe.jpg");
         background-repeat: no-repeat;
         background-size: 100% 100%;
         border-radius: 70px;
