--- a/nerds/templates/mobile/no_sched.html
+++ b/nerds/templates/mobile/no_sched.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "mobile/base.html" %}
 {% block title %}Not Found{% endblock %}
 {% block head %}
 {{ super() }}
@@ -32,7 +32,7 @@ $(document).ready(function(){
 
     #content {
         background-color: #222;
-        width: 50%;
+        width: 90%;
         height: 100%;
         border-style: solid;
         border-width: 3px;
